force-app/main/default/objects/RV_Outputs__c/RV_Outputs__c.object-meta.xml
<CustomObject>
    <label>RV Outputs</label>
    <nameField>
        <label>RV Outputs</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RV Outputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>