force-app/main/default/objects/RV_Outputs__c/fields/AssemblyLocation_30_Override__c.field-meta.xml
<CustomField>
    <fullName>AssemblyLocation_30_Override__c</fullName>
    <label>AssemblyLocation 30 Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>