force-app/main/default/objects/RV_Outputs__c/fields/AssemblyLocation_40__c.field-meta.xml
<CustomField>
    <fullName>AssemblyLocation_40__c</fullName>
    <label>AssemblyLocation 40</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>