force-app/main/default/objects/RV_Outputs__c/fields/AssemblyLocation__c.field-meta.xml
<CustomField>
    <fullName>AssemblyLocation__c</fullName>
    <label>AssemblyLocation</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>