force-app/main/default/objects/RV_Outputs__c/fields/Base_30_Override__c.field-meta.xml
<CustomField>
    <fullName>Base_30_Override__c</fullName>
    <label>Base 30 Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>