force-app/main/default/objects/RV_Outputs__c/fields/BrinnelHardnessExam_40_Override__c.field-meta.xml
<CustomField>
    <fullName>BrinnelHardnessExam_40_Override__c</fullName>
    <label>BrinnelHardnessExam 40 Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>