force-app/main/default/objects/RV_Outputs__c/fields/CharpyImpactTest_10__c.field-meta.xml
<CustomField>
    <fullName>CharpyImpactTest_10__c</fullName>
    <label>CharpyImpactTest 10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>