force-app/main/default/objects/RV_Outputs__c/fields/CharpyImpactTest_30__c.field-meta.xml
<CustomField>
    <fullName>CharpyImpactTest_30__c</fullName>
    <label>CharpyImpactTest 30</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>