force-app/main/default/objects/RV_Outputs__c/fields/CharpyImpactTesting__c.field-meta.xml
<CustomField>
    <fullName>CharpyImpactTesting__c</fullName>
    <label>CharpyImpactTesting</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>