force-app/main/default/objects/RV_Outputs__c/fields/CUTR__c.field-meta.xml
<CustomField>
    <fullName>CUTR__c</fullName>
    <label>CUTR</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>