force-app/main/default/objects/RV_Outputs__c/fields/Drilling__c.field-meta.xml
<CustomField>
    <fullName>Drilling__c</fullName>
    <label>Drilling</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>