force-app/main/default/objects/RV_Outputs__c/fields/ERVHighPressureBody__c.field-meta.xml
<CustomField>
    <fullName>ERVHighPressureBody__c</fullName>
    <label>ERVHighPressureBody</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>