force-app/main/default/objects/RV_Outputs__c/fields/FAModelBase__c.field-meta.xml
<CustomField>
    <fullName>FAModelBase__c</fullName>
    <label>FAModelBase</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>