force-app/main/default/objects/RV_Outputs__c/fields/FAOptionOutlet__c.field-meta.xml
<CustomField>
    <fullName>FAOptionOutlet__c</fullName>
    <label>FAOptionOutlet</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>