force-app/main/default/objects/RV_Outputs__c/fields/FAPaintOptions__c.field-meta.xml
<CustomField>
    <fullName>FAPaintOptions__c</fullName>
    <label>FAPaintOptions</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>