force-app/main/default/objects/RV_Outputs__c/fields/FiberglassFastener__c.field-meta.xml
<CustomField>
    <fullName>FiberglassFastener__c</fullName>
    <label>FiberglassFastener</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>