force-app/main/default/objects/RV_Outputs__c/fields/FieldTestConnection__c.field-meta.xml
<CustomField>
    <fullName>FieldTestConnection__c</fullName>
    <label>FieldTestConnection</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>