force-app/main/default/objects/RV_Outputs__c/fields/IntergranularCorrosionTest_20_Override__c.field-meta.xml
<CustomField>
    <fullName>IntergranularCorrosionTest_20_Override__c</fullName>
    <label>IntergranularCorrosionTest 20 Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>