force-app/main/default/objects/RV_Outputs__c/fields/IntergranularCorrosionTest_30__c.field-meta.xml
<CustomField>
    <fullName>IntergranularCorrosionTest_30__c</fullName>
    <label>IntergranularCorrosionTest 30</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>