force-app/main/default/objects/RV_Outputs__c/fields/IntergranularCorrosionTesting__c.field-meta.xml
<CustomField>
    <fullName>IntergranularCorrosionTesting__c</fullName>
    <label>IntergranularCorrosionTesting</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>