force-app/main/default/objects/RV_Outputs__c/fields/LiquidDyePenetrantExamination_30_Overrid__c.field-meta.xml
<CustomField>
    <fullName>LiquidDyePenetrantExamination_30_Overrid__c</fullName>
    <label>LiquidDyePenetrantExamination 30 Overrid</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>