force-app/main/default/objects/RV_Outputs__c/fields/LiquidDyePenetrantExamination__c.field-meta.xml
<CustomField>
    <fullName>LiquidDyePenetrantExamination__c</fullName>
    <label>LiquidDyePenetrantExamination</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>