force-app/main/default/objects/RV_Outputs__c/fields/MagParticleExam_10_Override__c.field-meta.xml
<CustomField>
    <fullName>MagParticleExam_10_Override__c</fullName>
    <label>MagParticleExam 10 Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>