force-app/main/default/objects/RV_Outputs__c/fields/MagParticleExam_20__c.field-meta.xml
<CustomField>
    <fullName>MagParticleExam_20__c</fullName>
    <label>MagParticleExam 20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>