force-app/main/default/objects/RV_Outputs__c/fields/MaterialSource_10_Override__c.field-meta.xml
<CustomField>
    <fullName>MaterialSource_10_Override__c</fullName>
    <label>MaterialSource 10 Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>