force-app/main/default/objects/RV_Outputs__c/fields/NACE__c.field-meta.xml
<CustomField>
    <fullName>NACE__c</fullName>
    <label>NACE</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>