force-app/main/default/objects/RV_Outputs__c/fields/OB_Override__c.field-meta.xml
<CustomField>
    <fullName>OB_Override__c</fullName>
    <label>OB</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>