force-app/main/default/objects/RV_Outputs__c/fields/Painting__c.field-meta.xml
<CustomField>
    <fullName>Painting__c</fullName>
    <label>Painting</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>