force-app/main/default/objects/RV_Outputs__c/fields/PC_Override__c.field-meta.xml
<CustomField>
    <fullName>PC_Override__c</fullName>
    <label>PC_Override</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>