force-app/main/default/objects/RV_Outputs__c/fields/PilotSupplyFilter__c.field-meta.xml
<CustomField>
    <fullName>PilotSupplyFilter__c</fullName>
    <label>PilotSupplyFilter</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>