force-app/main/default/objects/RV_Outputs__c/fields/PositiveMaterialIdentification_20__c.field-meta.xml
<CustomField>
    <fullName>PositiveMaterialIdentification_20__c</fullName>
    <label>PositiveMaterialIdentification 20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>