force-app/main/default/objects/RV_Outputs__c/fields/PositiveMaterialIdentification_30_Overri__c.field-meta.xml
<CustomField>
    <fullName>PositiveMaterialIdentification_30_Overri__c</fullName>
    <label>PositiveMaterialIdentification 30 Overri</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>