force-app/main/default/objects/RV_Outputs__c/fields/ProximitySensor_40__c.field-meta.xml
<CustomField>
    <fullName>ProximitySensor_40__c</fullName>
    <label>ProximitySensor 40</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>