force-app/main/default/objects/RV_Outputs__c/fields/Queue_Time_10__c.field-meta.xml
<CustomField>
    <fullName>Queue_Time_10__c</fullName>
    <label>Queue Time 10</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>