force-app/main/default/objects/RV_Outputs__c/fields/QueueTimeOverride__c.field-meta.xml
<CustomField>
    <fullName>QueueTimeOverride__c</fullName>
    <label>QueueTimeOverride</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>