force-app/main/default/objects/RV_Outputs__c/fields/RadiographyExamination__c.field-meta.xml
<CustomField>
    <fullName>RadiographyExamination__c</fullName>
    <label>RadiographyExamination</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>