force-app/main/default/objects/RV_Outputs__c/fields/RemoteSense__c.field-meta.xml
<CustomField>
    <fullName>RemoteSense__c</fullName>
    <label>RemoteSense</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>