force-app/main/default/objects/RV_Outputs__c/fields/RV_Outputs_Relation_Field__c.field-meta.xml
<CustomField>
    <fullName>RV_Outputs_Relation_Field__c</fullName>
    <label>RV Outputs Relation Field</label>
    <referenceTo>Relief_Valve__c</referenceTo>
    <relationshipLabel>RV Outputs</relationshipLabel>
    <relationshipName>RV_Outputs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>