force-app/main/default/objects/RV_Outputs__c/fields/SettingMinPressure__c.field-meta.xml
<CustomField>
    <fullName>SettingMinPressure__c</fullName>
    <label>SettingMinPressure</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>