force-app/main/default/objects/RV_Outputs__c/fields/SettingMinVacuum__c.field-meta.xml
<CustomField>
    <fullName>SettingMinVacuum__c</fullName>
    <label>SettingMinVacuum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>