force-app/main/default/objects/RV_Outputs__c/fields/ShellTestBody_20__c.field-meta.xml
<CustomField>
    <fullName>ShellTestBody_20__c</fullName>
    <label>ShellTestBody 20</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>