force-app/main/default/objects/RV_Outputs__c/fields/Site_20_Outside_Override__c.field-meta.xml
<CustomField>
    <fullName>Site_20_Outside_Override__c</fullName>
    <label>Site 20 Outside Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>