force-app/main/default/objects/RV_Outputs__c/fields/Site_30_Inside_Override__c.field-meta.xml
<CustomField>
    <fullName>Site_30_Inside_Override__c</fullName>
    <label>Site 30 Inside Override</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>