force-app/main/default/objects/RV_Outputs__c/fields/SpacerPressure__c.field-meta.xml
<CustomField>
    <fullName>SpacerPressure__c</fullName>
    <label>SpacerPressure</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>