force-app/main/default/objects/RV_Outputs__c/fields/SpringPressure__c.field-meta.xml
<CustomField>
    <fullName>SpringPressure__c</fullName>
    <label>SpringPressure</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>