force-app/main/default/objects/RV_Outputs__c/fields/SpringVacuum__c.field-meta.xml
<CustomField>
    <fullName>SpringVacuum__c</fullName>
    <label>SpringVacuum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>