force-app/main/default/objects/RV_Outputs__c/fields/Total_Lead_time__c.field-meta.xml
<CustomField>
    <fullName>Total_Lead_time__c</fullName>
    <label>Total Lead time</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>