force-app/main/default/objects/RV_Outputs__c/fields/UltrasonicExamination__c.field-meta.xml
<CustomField>
    <fullName>UltrasonicExamination__c</fullName>
    <label>UltrasonicExamination</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>