force-app/main/default/objects/RV_Outputs__c/fields/VacuumPortOptions__c.field-meta.xml
<CustomField>
    <fullName>VacuumPortOptions__c</fullName>
    <label>VacuumPortOptions</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>