force-app/main/default/objects/RV_Outputs__c/fields/WeightPressure__c.field-meta.xml
<CustomField>
    <fullName>WeightPressure__c</fullName>
    <label>WeightPressure</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>