force-app/main/default/objects/RV_Outputs__c/fields/WeightSettingPressure__c.field-meta.xml
<CustomField>
    <fullName>WeightSettingPressure__c</fullName>
    <label>WeightSettingPressure</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>