force-app/main/default/objects/RV_Outputs__c/fields/WeightSettingVacuum__c.field-meta.xml
<CustomField>
    <fullName>WeightSettingVacuum__c</fullName>
    <label>WeightSettingVacuum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>