force-app/main/default/objects/RV_Outputs__c/fields/WeightVacuum__c.field-meta.xml
<CustomField>
    <fullName>WeightVacuum__c</fullName>
    <label>WeightVacuum</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>