force-app/main/default/objects/RV_Outputs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssemblyLocation__c</columns>
    <columns>BrinnellHardnessExamination__c</columns>
    <columns>CharpyImpactTesting__c</columns>
    <columns>CUTR__c</columns>
    <columns>Drilling__c</columns>
    <columns>ERVHighPressureBody__c</columns>
    <columns>FAModelBase__c</columns>
    <columns>FAOptionOutlet__c</columns>
    <columns>FAPaintOptions__c</columns>
    <columns>FiberglassFastener__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RV_Outputs_Relation_Field__c</field>
        <operation>equals</operation>
        <value>RV-0355</value>
    </filters>
    <label>All Records</label>
</ListView>